# Ajax02

./: .gitignore  AUTH0_SETUP.md  AUTH0_TROUBLESHOOTING.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_RAILWAY_VERCEL.md  GET_CREDENTIALS_FOR_RAILWAY.md  MULTI_TENANT_PLAN.md  RAILWAY_DEPLOYMENT.md  RAILWAY_ENV_SETUP.md  README.md  SPRINT_1_COMPLETE.md  UPLOAD_UI_SUMMARY.md  VERCEL_DEPLOYMENT_GUIDE.md  encode_credentials_for_railway.py  prepare_ajax02.sh  railway_base64_credentials.txt  setup_tables_simple.py  start.sh  test_auth0_direct.html  test_data_analysis.py  test_real_upload.py  test_simple_upload.py  test_upload_simulation.py  vercel.json
backend/: .env.example  .env.production  .env.railway  Dockerfile.backup  app_settings.json  create_simple_competition_table.py  create_simple_rent_roll_table.py  create_system_tables.py  create_system_tables.sql  create_upload_to_analytics_pipeline.py  dev.py  encode_credentials.py  main.py  pyproject.toml  railway.toml  requirements.txt  setup_system_tables.py  test_auth_dev.py  test_imports.py
backend/app/: __init__.py  admin_service.py  auth.py  config.py  database.py  main.py  models.py  pricing.py  upload_models.py  upload_service.py  utils.py
backend/tests/: __init__.py  test_pricing.py
docs/: 01-SOFTWARE-ARCHITECTURE-DOCUMENT.md  02-TECHNICAL-DESIGN-DOCUMENT.md  03-SOFTWARE-SYSTEM-SPECIFICATION.md  04-INTERNAL-DEVELOPER-GUIDE.md  05-ENGINEERING-RUNBOOK.md  PRODUCT-OVERVIEW-BRIEFING.md  UPLOAD_SYSTEM_GUIDE.md  rent_roll-20250628 - RentRoll (3).csv  scraperVspanish - Sheet10.csv
frontend/: .env.example  .env.production  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
infra/: deploy-cloud-run.sh  docker-compose.yml
scripts/: encode-credentials.py  setup_upload_infrastructure.py  test_upload_endpoints.py
sql/: create_analytics_dataset.sql  create_datasets.sql  setup_bigquery.sql  setup_uploads_infrastructure.sql
sql/mart/: unit_competitor_pairs.sql  unit_snapshot.sql
sql/staging/: comps.sql  our_units.sql
(+22 files in other folders)
